Title changed & container position to absolute

--- a/carteDeVisite.html
+++ b/carteDeVisite.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carte de Visite - Julien Le Goff</title>
+    <title>CV - Julien Le Goff</title>
     <link rel="stylesheet" href="carteDeVisite.css">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@100;200;300;400;500;600;700&display=swap"
         rel="stylesheet">
 </head>
+	<body>
         <header>
              <h1 aria-label="Né à Brest le 19 mars 1982, je fais ici mes premiers pas dans le développement Web en réalisant mon premier CV en ligne..."></h1> 
         </header>
