--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carte de Visite - Julien Le Goff</title>
+    <title>CV - Julien Le Goff</title>
     <link rel="stylesheet" href="carteDeVisite.css">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@100;200;300;400;500;600;700&display=swap"
         rel="stylesheet">
