--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carte de Visite - Julien Le Goff</title>
+    <title>CV - Julien Le Goff</title>
     <link rel="stylesheet" href="carteDeVisite.css">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@100;200;300;400;500;600;700&display=swap"
         rel="stylesheet">
 </head>
-    <body>
         <header>
              <h1 aria-label="Né à Brest le 19 mars 1982, je fais ici mes premiers pas dans le développement Web en réalisant mon premier CV en ligne..."></h1> 
         </header>
@@ -45,12 +44,12 @@
 			</section>
 			<section class="box">
 				<div class="imgBx">
-					<a href="centresInteret.html"><img src="images/img4.png"></a>
+					<a href="centresinteret.html"><img src="images/img4.png"></a>
 				</div>
 				<div class="content">
 					<h2>Centre d'intêrets</h2>
 					<p>Voyages, nouvelle technologie, sport, apprentissages...</p>
-					<a href="centresInteret.html">En Savoir Plus...</a>
+					<a href="centresinteret.html">En Savoir Plus...</a>
 				</div>
 			</section>
 		</main>
